# elgamal_signature

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/cryptography/: cryptography.cpp  cryptography.h  signature.h  tools.cpp  tools.h
src/view/: abstract_view.h  sign_view.cpp  sign_view.h  verify_view.cpp  verify_view.h  view.cpp  view.h
test/: CMakeLists.txt  elgamal_test.cpp  tools_test.cpp
